[fix] Operation: hide copy position button, on mobile device

--- a/src/app/shared/material/latlong/material.latlong.scss
+++ b/src/app/shared/material/latlong/material.latlong.scss
@@ -1,9 +1,15 @@
 :host {
-  min-width: 140px;
   display: inline-block;
   width: 100%;
+  min-width: 140px;
   position: relative;
   --ion-grid-column-padding: 0;
+}
+
+mat-form-field {
+  .datetime-md {
+    padding: 0 !important;
+  }
 }
 
 ion-row {
